--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -97,7 +97,9 @@ jobs:
         # A list of files, directories, and wildcard patterns to cache and restore
         path: 
         # An explicit key for restoring and saving the cache
-        key: 
+        key: uses: actions/cache/save@v4
+with:
+    key: ${{ steps.restore-cache.outputs.cache-primary-key }} 
         # An ordered multiline string listing the prefix-matched keys, that are used for restoring stale cache if no cache hit occurred for key. Note `cache-hit` returns false in this case.
         restore-keys: # optional
         # The chunk size used to split up large files during upload, in bytes
