--- a/.github/workflows/anchore.yml
+++ b/.github/workflows/anchore.yml
@@ -1,48 +1,9 @@
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-
-# This workflow checks out code, builds an image, performs a container image
-# vulnerability scan with Anchore's Grype tool, and integrates the results with GitHub Advanced Security
-# code scanning feature.  For more information on the Anchore scan action usage
-# and parameters, see https://github.com/anchore/scan-action. For more
-# information on Anchore's container image scanning tool Grype, see
-# https://github.com/anchore/grype
-name: Upload a Build Artifact
-  uses: actions/upload-artifact@v4.6.2
-  with:
-    # Artifact name
-    name: # optional, default is artifact
-    # A file, directory or wildcard pattern that describes what to upload
-    path: 
-    # The desired behavior if no files are found using the provided path.
-Available Options:
-  warn: Output a warning but do not fail the action
-  error: Fail the action with an error message
-  ignore: Do not output any warnings or errors, the action does not fail
-
-    if-no-files-found: # optional, default is warn
-    # Duration after which artifact will expire in days. 0 means using default retention.
-Minimum 1 day. Maximum 90 days unless changed from the repository settings page.
-
-    retention-days: # optional
-    # The level of compression for Zlib to be applied to the artifact archive. The value can range from 0 to 9: - 0: No compression - 1: Best speed - 6: Default compression (same as GNU Gzip) - 9: Best compression Higher levels will result in better compression, but will take longer to complete. For large files that are not easily compressed, a value of 0 is recommended for significantly faster uploads.
-
-    compression-level: # optional, default is 6
-    # If true, an artifact with a matching name will be deleted before a new one is uploaded. If false, the action will fail if an artifact for the given name already exists. Does not fail if the artifact does not exist.
-
-    overwrite: # optional, default is false
-    # If true, hidden files will be included in the artifact. If false, hidden files will be excluded from the artifact.
-
-    include-hidden-files: # optional, default is false
-          
+name: Anchore Scan and Upload Artifact
 
 on:
   push:
     branches: [ "main" ]
   pull_request:
-    # The branches below must be a subset of the branches above
     branches: [ "main" ]
   schedule:
     - cron: '42 13 * * 4'
@@ -53,9 +14,9 @@ permissions:
 jobs:
   Anchore-Build-Scan:
     permissions:
-      contents: read # for actions/checkout to fetch code
-      security-events: write # for github/codeql-action/upload-sarif to upload SARIF results
-      actions: read # only required for a private repository by github/codeql-action/upload-sarif to get the Action run status
+      contents: read
+      security-events: write
+      actions: read
     runs-on: ubuntu-latest
     steps:
     - name: Check out the code
@@ -73,3 +34,13 @@ jobs:
       uses: github/codeql-action/upload-sarif@v3
       with:
         sarif_file: ${{ steps.scan.outputs.sarif }}
+    - name: Upload a Build Artifact
+      uses: actions/upload-artifact@v4.6.2
+      with:
+        name: artifact
+        path: dist/ # <--- 실제 업로드할 경로로 변경
+        if-no-files-found: warn
+        retention-days: 7
+        compression-level: 6
+        overwrite: false
+        include-hidden-files: false
